gtk/theme/HighContrast/_common.scss
/* ... */
//vbox and hbox separators
separator {
  background: $borders_color;
  min-width: 1px;
  min-height: 1px;
}

/*********
 * Lists *
 *********/

list {
  background-color: $base_color;
  border-color: $borders_color;
  &:backdrop {
    background-color: $backdrop_base_color;
    border-color: $backdrop_borders_color;
  }
  & row {
    padding: 2px;
  }
}

row.activatable,
row.activatable:backdrop,
row.activatable:backdrop:active,
row.activatable:backdrop:checked,
row.activatable:backdrop:disabled,
row.activatable:backdrop:disabled:active,
row.activatable:backdrop:disabled:checked,
row.activatable:disabled:active,
row.activatable:disabled:checked {
  // reset button inherited stuff
  @extend %undecorated_button;
  background-color: transparentize($base_color,1); // for the transition
  border-style: none; // I need no borders here
  border-radius: 0;   // and no rounded corners
  box-shadow: none;   // and no box-shadow
}

row {
  &.activatable {
    color: $fg_color;
    &:hover {
      background-color: mix($fg_color, $base_color, 5%);
    }
    &:active {
      box-shadow: inset 0 2px 2px -2px transparentize(black, 0.8);
    }
    &:selected {
      @extend %selected_items;
      background-color: $selected_bg_color;
      color: $selected_fg_color;
      &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
      &:hover {
        background-color: mix($fg_color, $selected_bg_color, 10%);
      }
      &:backdrop { background-color: $borders_color; }
      .button.flat { 
        color: $selected_fg_color;
        &:hover { color: $fg_color; }
        &:active { color: $selected_fg_color; }
      }
    }
  }
  .button.flat {
    color: $fg_color;
    &:active { color: $selected_fg_color; }
  }
}


// transition
row,
row.activatable {
  transition: all 300ms $ease-out-quad;
  &:hover { transition: none; }
}


/*********************
 * App Notifications *
 *********************/

.app-notification,
.app-notification.frame {
  padding: 10px;
  border-width: 0 1px 1px;
  border-style: solid;
  border-color: $borders_color;
  border-radius: 0 0 6px 6px;
  background-image: linear-gradient(to bottom, mix(black, $bg_color, 6%) 5%,
                              mix(black, $bg_color, 4%));
  // FIXME no space for outer shadow : box-shadow: 0 1px 1px rgba(0,0,0,.5);
  .button { padding: 6px; }
  border { border-width: 0; }
}

/*************
 * Expanders *
 *************/

expander {
  & arrow {
    min-width: 16px;
    min-height: 16px;
    -gtk-icon-source: -gtk-icontheme('pan-end-symbolic');
    &:dir(rtl) { -gtk-icon-source: -gtk-icontheme('pan-end-symbolic-rtl'); }
    &:checked { -gtk-icon-source: -gtk-icontheme('pan-down-symbolic'); }
  }
  title:hover arrow {
    color: lighten($fg_color,30%); //only lightens the arrow
  }
}

/************
 * Calendar *
 ***********/
calendar {
  border: 1px solid $borders_color;
  &:selected {
    @extend .view:selected;
  }
  &.button {
    @extend %undecorated_button;
    padding: 0 4px; //FIXME no effect on these pseudobuttons
    color: mix($fg_color, $base_color, 40%); //we need a dimmed stuff var
    &:hover {
      @extend %undecorated_button;
      color: $fg_color;
    }
    &:backdrop, &:backdrop:hover {
      @extend %undecorated_button;
      color: mix($backdrop_fg_color, $backdrop_base_color, 50%);
    }
  }
  &.view { border-radius: 2px; }
  &.header {
    background: linear-gradient(to bottom,
                                lighten($bg_color,2%),
                                darken($bg_color,2%));
    border-bottom-color: mix($borders_color,$bg_color,50%);
    &:backdrop {
      background-image: _solid($backdrop_bg_color);
      border-bottom-color: mix($backdrop_borders_color,$backdrop_bg_color,50%);
    }
  }

  &:indeterminate, &:indeterminate:backdrop { color: gtkalpha(currentColor, 0.55); }
  &.highlight, &.highlight:backdrop { color: $fg_color; }
}


/***********
 * Dialogs *
 ***********/

messagedialog .dialog-action-area button {
  padding: 8px;
}
/* ... */

